--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/webp/hero-img.webp" type="image/x-icon">
     <!-- SLIDER LINK -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
         integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
@@ -14,7 +15,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--  -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Kaijuu</title>
     <!-- Primary Meta Tags -->
     <title>kaijuu</title>
     <meta name="title" content="kaijuu" />
@@ -243,7 +243,7 @@
             </div>
         </section>
         <!-- HERO -->
-        <section class="bg-[url(assets/images/png/hero-bg.png)] bg-no-repeat bg-cover">
+        <section class="bg-[url(assets/images/webp/hero-bg.webp)] bg-no-repeat bg-cover">
             <div class="container">
                 <div class="lg:flex pt-[55px] justify-between">
                     <div class="flex-col">
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                     <div>
-                        <img src="assets/images/png/hero-img.png" alt="Kaijuu"
+                        <img src="assets/images/webp/hero-img.webp" alt="Kaijuu"
                             class="xl:max-w-[707px] md:max-w-[490px] max-w-[331px] max-xl:mx-auto">
                     </div>
                 </div>
@@ -302,18 +302,18 @@
             <div class="overflow-x-visible flex justify-center w-full">
                 <div class="scroll-content">
                     <!-- First set of images -->
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/png/hero-boys.png"
+                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
                         alt="character-img">
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/png/hero-boys.png"
+                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
                         alt="character-img">
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/png/hero-boys.png"
+                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
                         alt="character-img">
                     <!-- Duplicate set of images for seamless scroll -->
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/png/hero-boys.png"
+                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
                         alt="character-img">
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/png/hero-boys.png"
+                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
                         alt="character-img">
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/png/hero-boys.png"
+                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
                         alt="character-img">
                 </div>
             </div>
@@ -366,7 +366,7 @@
             </div>
         </section>
         <!--KAIJUU CREW  -->
-        <section class="bg-[url(assets/images/png/crew-bg.png)] bg-no-repeat bg-cover xl:pt-[171px] xl:pb-[225px] md:py-[100px] py-[50px]">
+        <section class="bg-[url(assets/images/webp/crew-bg.webp)] bg-no-repeat bg-cover xl:pt-[171px] xl:pb-[225px] md:py-[100px] py-[50px]">
             <div class="container 2xl:max-w-[1794px] mx-auto">
                 <h2 class="text-red md:text-7xl text-6xl font-normal leading-custom-xl text-center uppercase xl:pb-[85px] pb-12 font-godzilla">Kaijuu <span
                         class="text-white"> Crew Classes </span></h2>
@@ -409,7 +409,7 @@
             <div class="container">
                 <div class="lg:flex ">
                     <div>
-                        <img src="assets/images/png/story-img.png" alt="story"
+                        <img src="assets/images/webp/story-img.webp" alt="story"
                             class="xl:max-w-[619px] md:max-w-[500px] max-w-[350px] max-xl:mx-auto">
                     </div>
                     <div class="xl:pt-[132px] md:pt-[60px] xl:pl-[53px] md:pl-6">
@@ -436,12 +436,12 @@
             </div>
         </section>
         <!-- TRAITS -->
-        <section class="bg-[url(assets/images/png/traits-bg.png)] bg-no-repeat bg-cover lg:pt-[97px] xl:pb-[156px] lg:pb-[97px] py-[60px] -mt-1">
+        <section class="bg-[url(assets/images/webp/traits-bg.webp)] bg-no-repeat bg-cover lg:pt-[97px] xl:pb-[156px] lg:pb-[97px] py-[60px] -mt-1">
             <div class="container">
                 <h2 class="text-red text-7xl leading-custom-xl text-center font-normal font-godzilla">TRAITS</h2>
                 <div class="lg:flex lg:pt-10 justify-between">
                     <div>
-                        <img src="assets/images/png/traits-img.png" alt="traits"
+                        <img src="assets/images/webp/traits-img.webp" alt="traits"
                             class="xl:max-w-[738px] md:max-w-[530px] max-w-[350px] max-xl:mx-auto">
                     </div>
                     <div
@@ -729,7 +729,7 @@
        
 
         <!-- FAQ -->
-        <section class="bg-[url(assets/images/png/faq-bg.png)] bg-no-repeat bg-cover xl:pt-[106px] pt-16 -mt-1">
+        <section class="bg-[url(assets/images/webp/faq-bg.webp)] bg-no-repeat bg-cover xl:pt-[106px] pt-16 -mt-1">
             <div class="container">
                 <h2 class="text-red font-normal text-7xl leading-custom-xl text-center xl:pb-[55px] pb-5 font-godzilla">FAQ<span
                         class="text-custom-lg text-white">s</span></h2>
