--- a/index.html
+++ b/index.html
@@ -350,15 +350,15 @@
                     </div>
                     <div class="flex-col xl:pb-[135px] pb-[61px] ">
                         <div class="flex max-xl:justify-center">
-                            <img src="assets/images/png/about1-img.png" alt="about1"
+                            <img src="assets/images/webp/about1-img.webp" alt="about1"
                                 class="xl:max-w-[286px] md:max-w-[230px] max-w-[175px]">
-                            <img src="assets/images/png/about2-img.png" alt="about2"
+                            <img src="assets/images/webp/about2-img.webp" alt="about2"
                                 class="xl:max-w-[286px] md:max-w-[230px] max-w-[175px]">
                         </div>
                         <div class="flex max-xl:justify-center">
-                            <img src="assets/images/png/about3-img.png" alt="about1"
+                            <img src="assets/images/webp/about3-img.webp" alt="about3"
                                 class="xl:max-w-[286px] md:max-w-[230px] max-w-[175px]">
-                            <img src="assets/images/png/about4-img.png" alt="about2"
+                            <img src="assets/images/webp/about4-img.webp" alt="about4"
                                 class="xl:max-w-[286px] md:max-w-[230px] max-w-[175px]">
                         </div>
                     </div>
@@ -372,31 +372,31 @@
                         class="text-white"> Crew Classes </span></h2>
                 <div class="flex flex-wrap justify-center 2xl:gap-[131px] gap-[30px]">
                     <div>
-                        <img src="assets/images/png/crew1-img.png" alt="crew1"
+                        <img src="assets/images/webp/crew1-img.webp" alt="crew1"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
                         <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
                         </p>
                     </div>
                     <div>
-                        <img src="assets/images/png/crew2-img.png" alt="crew1"
+                        <img src="assets/images/webp/crew2-img.webp" alt="crew2"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
                         <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
                         </p>
                     </div>
                     <div>
-                        <img src="assets/images/png/crew3-img.png" alt="crew1"
+                        <img src="assets/images/webp/crew3-img.webp" alt="crew3"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
                         <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
                         </p>
                     </div>
                     <div>
-                        <img src="assets/images/png/crew4-img.png" alt="crew1"
+                        <img src="assets/images/webp/crew4-img.webp" alt="crew4"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
                         <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
                         </p>
                     </div>
                     <div>
-                        <img src="assets/images/png/crew3-img.png" alt="crew1"
+                        <img src="assets/images/webp/crew3-img.webp" alt="crew3"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
                         <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
                         </p>
@@ -520,7 +520,7 @@
                                 tortor eros.</li>
                         </ul>
                         <div
-                            class="mt-5 relative bg-[url('assets/images/png/red-box.png')]  bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] flex items-center justify-center">
+                            class="mt-5 relative bg-[url('assets/images/webp/red-box.webp')]  bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] flex items-center justify-center">
                             <img src="assets/images/png/white-up.png" alt="white-line"
                                 class="absolute top-[-36px] translate-x-1 h-[42px] ">
                             <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-1</h2>
@@ -529,7 +529,7 @@
                         </div>
                         <div class="relative">
                             <div
-                                class="absolute bg-[url('assets/images/png/red-box.png')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-66px] flex items-center justify-center left-[252px]">
+                                class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-66px] flex items-center justify-center left-[252px]">
                                 <img class="pointer-events-none absolute -top-36 max-w-[334px] pl-2"
                                     src="assets/images/png/white-box.png" alt="white-ring-img">
                                 <img src="assets/images/png/white-down.png" alt="line"
@@ -561,7 +561,7 @@
                                     arcu, dolor vestibulum.</li>
                             </ul>
                             <div
-                                class="absolute bg-[url('assets/images/png/red-box.png')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-238px] left-[500px] flex items-center justify-center">
+                                class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-238px] left-[500px] flex items-center justify-center">
                                 <img src=" assets/images/png/white-up.png" alt="line"
                                     class="absolute top-[-34px] translate-x-1 h-[42px]">
                                 <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-3</h2>
@@ -571,7 +571,7 @@
                         </div>
                         <div class="relative">
                             <div
-                                class="absolute bg-[url('assets/images/png/red-box.png')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] bottom-[-183px] left-[746px] flex items-center justify-center">
+                                class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] bottom-[-183px] left-[746px] flex items-center justify-center">
                                 <img class="pointer-events-none absolute -top-36 max-w-[334px] pl-2"
                                     src="assets/images/png/white-box.png" alt="white-ring-img">
                                 <img src="assets/images/png/white-down.png" alt="line"
@@ -598,7 +598,7 @@
                                     elementum sit mauris amet non.</li>
                             </ul>
                             <div
-                                class="absolute bg-[url('assets/images/png/red-box.png')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-230px] left-[997px] flex items-center justify-center">
+                                class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-230px] left-[997px] flex items-center justify-center">
                                 <img src=" assets/images/png/white-up.png" alt="line"
                                     class="absolute top-[-34px] translate-x-1 h-[42px]">
                                 <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-5</h2>
@@ -609,7 +609,7 @@
                 <div class="flex xl:items-center justify-center flex-col gap-3 xl:hidden">
                     <div class="flex items-center gap-[55px] max-sm:gap-7">
                         <div
-                            class="felx items-center bg-[url('assets/images/png/red-box.png')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
+                            class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
                             <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-1</h2>
                         </div>
                         <div>
@@ -623,7 +623,7 @@
                     </div>
                     <div class="flex items-center gap-[55px] max-sm:gap-7 ">
                         <div
-                            class="felx items-center bg-[url('assets/images/png/red-box.png')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
+                            class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
                             <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-2</h2>
                         </div>
                         <div>
@@ -637,7 +637,7 @@
                     </div>
                     <div class="flex items-center gap-[55px] max-sm:gap-7 ">
                         <div
-                            class="felx items-center bg-[url('assets/images/png/red-box.png')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
+                            class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
                             <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-3</h2>
                         </div>
                         <div>
@@ -651,7 +651,7 @@
                     </div>
                     <div class="flex items-center gap-[55px] max-sm:gap-7 ">
                         <div
-                            class="felx items-center bg-[url('assets/images/png/red-box.png')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
+                            class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
                             <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-4</h2>
                         </div>
                         <div>
@@ -665,7 +665,7 @@
                     </div>
                     <div class="flex items-center gap-[55px] max-sm:gap-7 ">
                         <div
-                            class="felx items-center bg-[url('assets/images/png/red-box.png')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
+                            class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
                             <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-5</h2>
                         </div>
                         <div>
@@ -688,7 +688,7 @@
                 </button>
                 <div class="flex gap-6 xl:pt-[56px] pt-7 justify-center slider max-w-[1320px] mx-auto">
                     <div>
-                        <img src="assets/images/png/team1-image.png" alt="team1"
+                        <img src="assets/images/webp/team1-image.webp" alt="team1"
                             class="xl:max-w-[424px]  max-w-[342px]">
                         <p class="text-white font-normal text-4xl font-Righteous leading-custom-lg text-center">Boss
                             Kaijuu
@@ -696,18 +696,18 @@
                         <p class="text-white font-normal text-lg leading-custom-lg text-center pt-2">KJC#29</p>
                     </div>
                     <div>
-                        <img src="assets/images/png/team2-image.png" alt="team1"
+                        <img src="assets/images/webp/team2-image.webp" alt="team2"
                             class="xl:max-w-[424px]  max-w-[342px]">
                         <p class="text-white font-normal text-4xl font-Righteous leading-custom-lg text-center">???</p>
                         <p class="text-white font-normal text-lg leading-custom-lg text-center pt-2">KJC#29</p>
                     </div>
                     <div>
-                        <img src="assets/images/png/team2-image.png" alt="team1" class="xl:max-w-[424px] max-w-[342px]">
+                        <img src="assets/images/webp/team2-image.webp" alt="team3" class="xl:max-w-[424px] max-w-[342px]">
                         <p class="text-white font-normal text-4xl font-Righteous leading-custom-lg text-center">???</p>
                         <p class="text-white font-normal text-lg leading-custom-lg text-center pt-2">KJC#29</p>
                     </div>
                     <div>
-                        <img src="assets/images/png/team1-image.png" alt="team1"
+                        <img src="assets/images/webp/team1-image.webp" alt="team1"
                             class="xl:max-w-[424px]  max-w-[342px]">
                         <p class="text-white font-normal text-4xl font-Righteous leading-custom-lg text-center">Boss
                             Kaijuu
@@ -715,7 +715,7 @@
                         <p class="text-white font-normal text-lg leading-custom-lg text-center pt-2">KJC#29</p>
                     </div>
                     <div>
-                        <img src="assets/images/png/team2-image.png" alt="team1" class="xl:max-w-[424px] max-w-[342px]">
+                        <img src="assets/images/webp/team2-image.webp" alt="team2" class="xl:max-w-[424px] max-w-[342px]">
                         <p class="text-white font-normal text-4xl font-Righteous leading-custom-lg text-center">???</p>
                         <p class="text-white font-normal text-lg leading-custom-lg text-center pt-2">KJC#29</p>
                     </div>
