image change into webp

--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                         </li>
                         <div class="relative bg-transparent flex justify-center items-center ">
                             <!-- Flag Image -->
-                            <img id="flag" class="w-[31px] rounded-full" src="./assets/images/png/flag.png" alt=" Flag">
+                            <img id="flag" class="w-[31px] rounded-full" src="./assets/images/webp/flag.webp" alt=" Flag">
                             <select id="language-select"
                                 class="block max-w-max px-[11px] focus:outline-none bg-transparent text-white appearance-auto font-Oswald font-normal text-custom-md  cursor-pointer">
                                 <option class="bg-red first !text-white" value="eng"
-                                    data-flag="assets/images/png/flag.png">ENG
+                                    data-flag="assets/images/webp/flag.webp">ENG
                                 </option>
                                 <option class="bg-red text-white" value="hindi"
                                     data-flag="https://static.vecteezy.com/system/resources/previews/011/571/519/original/circle-flag-of-india-free-png.png">
@@ -521,21 +521,21 @@
                         </ul>
                         <div
                             class="mt-5 relative bg-[url('assets/images/webp/red-box.webp')]  bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] flex items-center justify-center">
-                            <img src="assets/images/png/white-up.png" alt="white-line"
+                            <img src="assets/images/webp/white-up.webp" alt="white-line"
                                 class="absolute top-[-36px] translate-x-1 h-[42px] ">
                             <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-1</h2>
-                            <img src="assets/images/png/red-left.png" alt="red-line"
+                            <img src="assets/images/webp/red-left.webp" alt="red-line"
                                 class="absolute right-[-55px] bottom-[-6px]">
                         </div>
                         <div class="relative">
                             <div
                                 class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-66px] flex items-center justify-center left-[252px]">
                                 <img class="pointer-events-none absolute -top-36 max-w-[334px] pl-2"
-                                    src="assets/images/png/white-box.png" alt="white-ring-img">
-                                <img src="assets/images/png/white-down.png" alt="line"
+                                    src="assets/images/webp/white-box.webp" alt="white-ring-img">
+                                <img src="assets/images/webp/white-down.webp" alt="line"
                                     class="absolute bottom-[-34px] translate-x-1 h-[42px]">
                                 <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-2</h2>
-                                <img src="assets/images/png/red-right.png" alt="red-line"
+                                <img src="assets/images/webp/red-right.webp" alt="red-line"
                                     class="absolute top-0 right-[-51px] h-[74px]">
         
                             </div>
@@ -565,7 +565,7 @@
                                 <img src=" assets/images/png/white-up.png" alt="line"
                                     class="absolute top-[-34px] translate-x-1 h-[42px]">
                                 <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-3</h2>
-                                <img src="assets/images/png/red-left.png" alt="red-line"
+                                <img src="assets/images/webp/red-left.webp" alt="red-line"
                                     class="absolute bottom-0 right-[-54px]">
                             </div>
                         </div>
@@ -573,11 +573,11 @@
                             <div
                                 class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] bottom-[-183px] left-[746px] flex items-center justify-center">
                                 <img class="pointer-events-none absolute -top-36 max-w-[334px] pl-2"
-                                    src="assets/images/png/white-box.png" alt="white-ring-img">
-                                <img src="assets/images/png/white-down.png" alt="line"
+                                    src="assets/images/webp/white-box.webp" alt="white-ring-img">
+                                <img src="assets/images/webp/white-down.webp" alt="line"
                                     class="absolute bottom-[-34px] translate-x-1 h-[42px]">
                                 <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-4</h2>
-                                <img src="assets/images/png/red-right.png" alt="red-line"
+                                <img src="assets/images/webp/red-right.webp" alt="red-line"
                                     class="absolute top-0 right-[-54px] h-[74px]">
         
                             </div>
@@ -599,7 +599,7 @@
                             </ul>
                             <div
                                 class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-230px] left-[997px] flex items-center justify-center">
-                                <img src=" assets/images/png/white-up.png" alt="line"
+                                <img src="assets/images/webp/white-up.webp" alt="line"
                                     class="absolute top-[-34px] translate-x-1 h-[42px]">
                                 <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-5</h2>
                             </div>
