--- a/index.html
+++ b/index.html
@@ -299,22 +299,22 @@
                     </div>
                 </div>
             </div>
-            <div class="overflow-x-visible flex justify-center w-full">
+            <div class="overflow-x-visible flex justify-center w-full pt-8">
                 <div class="scroll-content">
                     <!-- First set of images -->
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
-                        alt="character-img">
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
-                        alt="character-img">
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
-                        alt="character-img">
+                    <img class="max-w-[2169px] max-lg:h-[200px] h-[295px]" src="./assets/images/webp/hero-boys.webp"
+                        alt="character">
+                    <img class="max-w-[2169px] max-lg:h-[200px] h-[295px]" src="./assets/images/webp/hero-boys.webp"
+                        alt="character">
+                    <img class="max-w-[2169px] max-lg:h-[200px] h-[295px]" src="./assets/images/webp/hero-boys.webp"
+                        alt="character">
                     <!-- Duplicate set of images for seamless scroll -->
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
-                        alt="character-img">
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
-                        alt="character-img">
-                    <img class="max-w-[2169px] max-lg:h-[200px]" src="./assets/images/webp/hero-boys.webp"
-                        alt="character-img">
+                    <img class="max-w-[2169px] max-lg:h-[200px] h-[295px]" src="./assets/images/webp/hero-boys.webp"
+                        alt="character">
+                    <img class="max-w-[2169px] max-lg:h-[200px] h-[295px]" src="./assets/images/webp/hero-boys.webp"
+                        alt="character">
+                    <img class="max-w-[2169px] max-lg:h-[200px] h-[295px]" src="./assets/images/webp/hero-boys.webp"
+                        alt="character">
                 </div>
             </div>
         </section>
@@ -366,11 +366,11 @@
             </div>
         </section>
         <!--KAIJUU CREW  -->
-        <section class="bg-[url(assets/images/webp/crew-bg.webp)] bg-no-repeat bg-cover xl:pt-[171px] xl:pb-[225px] md:py-[100px] py-[50px]">
+        <section class="bg-[url(assets/images/webp/crew-bg.webp)] bg-no-repeat bg-cover xl:pt-[171px] xl:pb-[225px] md:py-[100px] py-[50px] -mt-1">
             <div class="container 2xl:max-w-[1794px] mx-auto">
                 <h2 class="text-red md:text-7xl text-6xl font-normal leading-custom-xl text-center uppercase xl:pb-[85px] pb-12 font-godzilla">Kaijuu <span
                         class="text-white"> Crew Classes </span></h2>
-                <div class="flex flex-wrap justify-center 2xl:gap-[131px] gap-[30px]">
+                <div class="flex max-xl:flex-wrap justify-center 2xl:gap-[131px] gap-[30px]">
                     <div>
                         <img src="assets/images/webp/crew1-img.webp" alt="crew1"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
@@ -507,7 +507,7 @@
         <section id="roadmap" class="bg-blue lg:min-h-[1024px] lg:pt-[74px] pt-7 lg:pb-2 pb-7 -mt-1">
             <div class="container flex justify-center items-center w-full flex-col">
                 <h2
-                    class="text-center font-godzilla xl:mb-[45px] lg:mb-7 mb-5 text-red lg:text-7xl md:text-5xl text-4xl font-normal leading-[115%]">
+                    class="text-center font-godzilla xl:mb-[45px] lg:mb-7 mb-5 text-red text-7xl md:text-5xl  font-normal leading-[115%]">
                     RoadMap</h2>
                 <div class="w-full max-w-[1320px] mx-auto relative flex max-xl:hidden">
                     <div class="w-full ">
@@ -523,7 +523,7 @@
                             class="mt-5 relative bg-[url('assets/images/webp/red-box.webp')]  bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] flex items-center justify-center">
                             <img src="assets/images/webp/white-up.webp" alt="white-line"
                                 class="absolute top-[-36px] translate-x-1 h-[42px] ">
-                            <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-1</h2>
+                            <h2 class="text-white text-custom-lg max-md:text-4xl max-sm:text-3xl">Phase-1</h2>
                             <img src="assets/images/webp/red-left.webp" alt="red-line"
                                 class="absolute right-[-55px] bottom-[-6px]">
                         </div>
@@ -531,10 +531,10 @@
                             <div
                                 class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-66px] flex items-center justify-center left-[252px]">
                                 <img class="pointer-events-none absolute -top-36 max-w-[334px] pl-2"
-                                    src="assets/images/webp/white-box.webp" alt="white-ring-img">
+                                    src="assets/images/webp/white-box.webp" alt="white-box">
                                 <img src="assets/images/webp/white-down.webp" alt="line"
                                     class="absolute bottom-[-34px] translate-x-1 h-[42px]">
-                                <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-2</h2>
+                                <h2 class="text-white text-custom-lg max-md:text-4xl max-sm:text-3xl font-Oswald">Phase-2</h2>
                                 <img src="assets/images/webp/red-right.webp" alt="red-line"
                                     class="absolute top-0 right-[-51px] h-[74px]">
         
@@ -562,9 +562,9 @@
                             </ul>
                             <div
                                 class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-238px] left-[500px] flex items-center justify-center">
-                                <img src=" assets/images/png/white-up.png" alt="line"
+                                <img src="assets/images/webp/white-up.webp" alt="line"
                                     class="absolute top-[-34px] translate-x-1 h-[42px]">
-                                <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-3</h2>
+                                <h2 class="text-white text-custom-lg max-md:text-4xl max-sm:text-3xl font-Oswald">Phase-3</h2>
                                 <img src="assets/images/webp/red-left.webp" alt="red-line"
                                     class="absolute bottom-0 right-[-54px]">
                             </div>
@@ -573,10 +573,10 @@
                             <div
                                 class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] bottom-[-183px] left-[746px] flex items-center justify-center">
                                 <img class="pointer-events-none absolute -top-36 max-w-[334px] pl-2"
-                                    src="assets/images/webp/white-box.webp" alt="white-ring-img">
+                                    src="assets/images/webp/white-box.webp" alt="white-box">
                                 <img src="assets/images/webp/white-down.webp" alt="line"
                                     class="absolute bottom-[-34px] translate-x-1 h-[42px]">
-                                <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-4</h2>
+                                <h2 class="text-white text-custom-lg max-md:text-4xl max-sm:text-3xl font-Oswald">Phase-4</h2>
                                 <img src="assets/images/webp/red-right.webp" alt="red-line"
                                     class="absolute top-0 right-[-54px] h-[74px]">
         
@@ -601,7 +601,7 @@
                                 class="absolute bg-[url('assets/images/webp/red-box.webp')] bg-no-repeat bg-cover w-full max-w-[217px] h-[245px] top-[-230px] left-[997px] flex items-center justify-center">
                                 <img src="assets/images/webp/white-up.webp" alt="line"
                                     class="absolute top-[-34px] translate-x-1 h-[42px]">
-                                <h2 class="text-white text-[40px] max-md:text-4xl max-sm:text-3xl">Phase-5</h2>
+                                <h2 class="text-white text-custom-lg font-Oswald max-md:text-4xl max-sm:text-3xl">Phase-5</h2>
                             </div>
                         </div>
                     </div>
@@ -610,13 +610,13 @@
                     <div class="flex items-center gap-[55px] max-sm:gap-7">
                         <div
                             class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
-                            <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-1</h2>
+                            <h2 class="text-white text-3xl font-Oswald max-sm:text-2xl">Phase-1</h2>
                         </div>
                         <div>
                             <ul class="max-sm:max-w-32">
-                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-[150%] w-full">
+                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-custom-xl font-Oswald w-full">
                                     Ut eu ac sed duis nec amet.</li>
-                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-[150%] w-full">
+                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-custom-xl font-Oswald w-full">
                                     Sed elementum a tortor eros.</li>
                             </ul>
                         </div>
@@ -624,13 +624,13 @@
                     <div class="flex items-center gap-[55px] max-sm:gap-7 ">
                         <div
                             class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
-                            <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-2</h2>
+                            <h2 class="text-white text-3xl font-Oswald max-sm:text-2xl">Phase-2</h2>
                         </div>
                         <div>
                             <ul class="max-sm:max-w-32">
-                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-[150%] w-full">
+                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-custom-xl w-full font-Oswald">
                                     Sagittis tristique molestie eu pharetra.</li>
-                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-[150%] w-full">
+                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-custom-xl w-full font-Oswald">
                                     Nibh convallis ornare fringilla diam proin volutpat aliquet nunc.</li>
                             </ul>
                         </div>
@@ -638,13 +638,13 @@
                     <div class="flex items-center gap-[55px] max-sm:gap-7 ">
                         <div
                             class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
-                            <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-3</h2>
+                            <h2 class="text-white text-3xl font-Oswald max-sm:text-2xl">Phase-3</h2>
                         </div>
                         <div>
                             <ul class="max-sm:max-w-32">
-                                <li class="text-white list-disc lg:text-base text-xs w-full font-normal leading w-fullxt-base">
+                                <li class="text-white list-disc lg:text-base text-xs w-full font-normal leading-custom-xl font-Oswald">
                                     Adipiscing velit turpis pretium, tellus.</li>
-                                <li class="text-white list-disc lg:text-base text-xs w-full font-normal leading w-fullxt-base">
+                                <li class="text-white list-disc lg:text-base text-xs w-full font-normal leading-custom-xl font-Oswald">
                                     Ornare urna arcu, dolor vestibulum.</li>
                             </ul>
                         </div>
@@ -652,13 +652,13 @@
                     <div class="flex items-center gap-[55px] max-sm:gap-7 ">
                         <div
                             class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
-                            <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-4</h2>
+                            <h2 class="text-white text-3xl font-Oswald max-sm:text-2xl">Phase-4</h2>
                         </div>
                         <div>
                             <ul class="max-sm:max-w-32">
-                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-[150%] w-full">
+                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-custom-xl font-Oswald w-full">
                                     Eget imperdiet mauris interdum ut egestas lacinia lacus.</li>
-                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-[150%] w-full">
+                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-custom-xl font-Oswald w-full">
                                     Non ipsum, cursus consectetur fringilla aliquam.</li>
                             </ul>
                         </div>
@@ -666,11 +666,11 @@
                     <div class="flex items-center gap-[55px] max-sm:gap-7 ">
                         <div
                             class="felx items-center bg-[url('assets/images/webp/red-box.webp')] w-[217px] h-[245px] max-sm:w-[150px] max-sm:h-[168px] flex justify-center bg-cover bg-no-repeat">
-                            <h2 class="text-white text-[30px]  max-sm:text-2xl">Phase-5</h2>
+                            <h2 class="text-white text-3xl font-Oswald max-sm:text-2xl">Phase-5</h2>
                         </div>
                         <div>
                             <ul class="max-sm:max-w-32">
-                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-[150%] w-full">
+                                <li class="text-white list-disc lg:text-base text-xs font-normal leading-custom-xl font-Oswald w-full">
                                     Elementum elementum sit mauris amet non.</li>
                             </ul>
                         </div>
@@ -679,7 +679,7 @@
             </div>
         </section>
         <!-- TEAM -->
-        <section class="bg-blue lg:pt-[72px] pt-[60px] lg:pb-[123px] pb-10 relative">
+        <section class="bg-blue lg:pt-[72px] pt-[60px] lg:pb-[123px] pb-10 relative -mt-1">
             <div class="container">
                 <h2 class="text-red font-normal text-7xl leading-custom-xl text-center uppercase font-godzilla">Team</h2>
                 <button
