--- a/index.html
+++ b/index.html
@@ -163,27 +163,27 @@
                                 Us</a>
                         </li>
                         <li class="">
-                            <a href="#about"
+                            <a href="#story"
                                 class="font-Oswald font-normal text-custom-md text-off-white hover:font-bold transition-all duration-500">
                                 Story</a>
                         </li>
                         <li class="">
-                            <a href="#about"
+                            <a href="#traits"
                                 class="font-Oswald font-normal text-custom-md text-off-white hover:font-bold transition-all duration-500">
                                 Traits</a>
                         </li>
                         <li class="">
-                            <a href="#about"
+                            <a href="#roadmap"
                                 class="font-Oswald font-normal text-custom-md text-off-white hover:font-bold transition-all duration-500">
                                 Roadmap</a>
                         </li>
                         <li class="">
-                            <a href="#about"
+                            <a href="#team"
                                 class="font-Oswald font-normal text-custom-md text-off-white hover:font-bold transition-all duration-500">
                                 Team</a>
                         </li>
                         <li class="">
-                            <a href="#about"
+                            <a href="#faq"
                                 class="font-Oswald font-normal text-custom-md text-off-white hover:font-bold transition-all duration-500">
                                 FAQ</a>
                         </li>
@@ -319,7 +319,7 @@
         </section>
 
         <!-- ABOUT US -->
-        <section class="bg-black">
+        <section id="about" class="bg-black">
             <div class="container">
                 <div class="lg:flex pt-[61px] justify-between">
                     <div class="flex-col xl:pt-[68px] justify-between">
@@ -409,7 +409,7 @@
         </section>
 
         <!-- STORY -->
-        <section class="bg-black pt-16 xl:pb-[95px] pb-16">
+        <section id="story" class="bg-black pt-16 xl:pb-[95px] pb-16">
             <div class="container">
                 <div class="lg:flex ">
                     <div>
@@ -442,7 +442,7 @@
         </section>
 
         <!-- TRAITS -->
-        <section
+        <section id="traits"
             class="bg-[url(assets/images/webp/traits-bg.webp)] bg-no-repeat bg-cover lg:pt-[97px] xl:pb-[156px] lg:pb-[97px] py-[60px] -mt-1">
             <div class="container">
                 <h2 class="text-red text-7xl leading-custom-xl text-center font-normal font-godzilla">TRAITS</h2>
@@ -709,7 +709,7 @@
         </section>
 
         <!-- TEAM -->
-        <section class="bg-blue lg:pt-[72px] pt-[60px] lg:pb-[123px] pb-10 relative -mt-1">
+        <section id="team" class="bg-blue lg:pt-[72px] pt-[60px] lg:pb-[123px] pb-10 relative -mt-1">
             <div class="container">
                 <h2 class="text-red font-normal text-7xl leading-custom-xl text-center uppercase font-godzilla">Team
                 </h2>
@@ -761,7 +761,7 @@
         </section>
 
         <!-- FAQ -->
-        <section class="bg-[url(assets/images/webp/faq-bg.webp)] bg-no-repeat bg-cover xl:pt-[106px] pt-16 -mt-1">
+        <section id="faq" class="bg-[url(assets/images/webp/faq-bg.webp)] bg-no-repeat bg-cover xl:pt-[106px] pt-16 -mt-1">
             <div class="container">
                 <h2 class="text-red font-normal text-7xl leading-custom-xl text-center xl:pb-[55px] pb-5 font-godzilla">
                     FAQ<span class="text-custom-lg text-white">s</span></h2>
