--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--  -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Primary Meta Tags -->
-    <title>kaijuu</title>
+    <title>Kaijuu</title>
     <meta name="title" content="kaijuu" />
     <meta name="description" content=" The ocean surges with spray and foam,
                                 As Kaijuu rise from depth to roam.
