add spacing in menubar

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
         <!-- NAVBAR -->
         <section class="bg-black">
             <div class="container">
-                <nav class="flex justify-between items-center xl:pt-[35px] lg:pt-12 md:pt-7 pt-5 sm:pb-[26px] pb-0">
+                <nav class="flex justify-between items-center xl:pt-[35px] lg:pt-12 md:pt-7 pt-5 sm:pb-[26px] pb-0 max-md:px-2">
                     <a href="#kaijuucrew"
                         class="text-4xl font-godzilla leading-custom-sm font-normal text-red tracking-wider">
-                        Kaijuu<span class="text-white"> Crew</span>
+                        Kaijuu<span class="text-white">Crew</span>
 
                     </a>
-                    <button id="menu-btn" class="text-white focus:outline-none z-40 relative lg:pr-4 lg:hidden pt-2">
+                    <button id="menu-btn" class="text-white focus:outline-none z-40 relative lg:pr-4 lg:hidden  max-md:pb-5 pt-2">
                         <svg id="hamburger-icon" class="w-9 h-9" fill="black" stroke="currentColor" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -266,11 +266,11 @@
                             class="font-Oswald text-white md:text-5xl text-3xl font-bold pt-[18px] leading-custom-xl max-lg:text-center">
                             10:20:15:10</p>
                         <p
-                            class="text-white opacity-40 font-normal text-lg pb-[18px] leading-custom-xl max-lg:text-center">
+                            class="text-white opacity-40 font-normal text-lg pb-[18px] leading-custom-xl max-lg:text-center pt-1">
                             Days left</p>
                         <div class="flex items-center gap-4 max-lg:justify-center">
                             <button
-                                class="flex discord-svg justify-center items-center hover:bg-white border-[2px] border-transparent hover:text-red hover:border-red duration-300 ease-linear rounded-[7px] uppercase gap-[11px] font-bold xl:text-lg lg:text-base text-xs text-white leading-primary lg:py-[10px] py-2 lg:px-[52.5px] md:px-7 px-5 bg-red">
+                                class="flex discord-svg justify-center items-center hover:bg-white border-[2px] border-transparent hover:text-red font-Oswald hover:border-red duration-300 ease-linear rounded-[7px] uppercase gap-[11px] font-bold xl:text-lg lg:text-base text-xs text-white leading-primary lg:py-[10px] py-2 lg:px-[52.5px] md:px-7 px-5 bg-red">
                                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_67_195)">
@@ -287,7 +287,7 @@
                                 <p class="whitespace-nowrap">join discord</p>
                             </button>
                             <button
-                                class="whitespace-nowrap rounded-[7px] uppercase font-bold xl:text-lg lg:text-base hover:bg-white border-[2px] border-transparent hover:text-red hover:border-red duration-300 ease-linear text-xs text-white leading-primary lg:py-[10px] py-[10px] lg:px-[55.5px] md:px-7 px-5 bg-red">
+                                class="whitespace-nowrap rounded-[7px] uppercase font-bold xl:text-lg lg:text-base hover:bg-white border-[2px] font-Oswald border-transparent hover:text-red hover:border-red duration-300 ease-linear text-xs text-white leading-primary lg:py-[10px] py-[10px] lg:px-[55.5px] md:px-7 px-5 bg-red">
                                 Connect Wallet
                             </button>
                         </div>
@@ -452,7 +452,7 @@
                             class="2xl:max-w-[783px] xl:max-w-[738px] md:max-w-[530px] max-w-[350px] max-xl:mx-auto">
                     </div>
                     <div
-                        class="backdrop-blur-[25px] 2xl:pt-[91px] xl:py-[45px] py-[35px] bg-transparent 2xl:px-[70px] xl:px-[43px] px-[35px] rounded-[30px] xl:!max-w-[590px] max-w-[500px] xl:mt-[87px] max-xl:mx-auto">
+                        class="backdrop-blur-[25px] 2xl:pt-[91px] border border-off-white border-opacity-30 xl:py-[45px] py-[35px] bg-transparent 2xl:px-[70px] xl:px-[43px] px-[35px] rounded-[30px] xl:!max-w-[590px] max-w-[500px] xl:mt-[87px] max-xl:mx-auto">
                         <p
                             class="font-normal text-white md:text-5xl text-3xl leading-custom-xl uppercase xl:pb-[26px] pb-3 max-md:text-center font-godzilla">
                             Traits</p>
@@ -895,8 +895,7 @@
             </div>
             <div id="footer" class="container">
                 <div class="xl:pt-[72px] pt-8">
-                   <a href="#footer"><h2 class="text-red font-normal text-4xl leading-custom-sm text-center pb-7 font-godzilla">Kaijuu
-                    <span class="text-white">Crew</span>
+                   <a href="#footer"><h2 class="text-red font-normal text-4xl leading-custom-sm text-center pb-7 font-godzilla">Kaijuu<span class="text-white">Crew</span>
                 </h2></a> 
                     <div class="flex gap-6 justify-center pb-7">
                         <a href="https://x.com/?lang=en" target="_blank"
