--- a/index.html
+++ b/index.html
@@ -383,25 +383,25 @@
                     <div>
                         <img src="assets/images/webp/crew2-img.webp" alt="crew2"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
-                        <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
+                        <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Heavies
                         </p>
                     </div>
                     <div>
                         <img src="assets/images/webp/crew3-img.webp" alt="crew3"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
-                        <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
+                        <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Legends
                         </p>
                     </div>
                     <div>
                         <img src="assets/images/webp/crew4-img.webp" alt="crew4"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
-                        <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
+                        <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Elementals
                         </p>
                     </div>
                     <div>
                         <img src="assets/images/webp/crew3-img.webp" alt="crew3"
                             class="2xl:max-w-[254px] max-w-[230px] pb-[18px]">
-                        <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">Scouts
+                        <p class="font-Oswald text-white font-semibold text-4xl leading-custom-xl text-center">???
                         </p>
                     </div>
                 </div>
